# DWM

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
experiments/MPI/FaceBuffer_test/: README.md  clean.sh  main.c  main.h  main2.c  run.sh  types.h  utils.h
experiments/MPI/initial_test/: main.c  run.sh
experiments/ethernet_sync/: README.md  ethernet_sync.c  ethernet_sync.h  ethernet_sync2.c  ethernet_sync2.h
experiments/multithreading/: CMakeLists.txt  README.md  main.c  main.h  node.h  threadargs.h  types.h
experiments/usb-comm/: CMakeLists.txt  README.md  usb-test.c
mpi parallelized/: CMakeLists.txt  SETUP.md  communicator.c  communicator.h  config.c  config.h  facebuffer.c  facebuffer.h  header.h  main.c  main.h  node.c  node.h
mpi parallelized 2D/: CMakeLists.txt  config.h  facebuffer.c  facebuffer.h  main.c  main.h  node.h
mpi parallelized/docs/html/: annotated.html  classes.html  config_8h.html  config_8h_source.html  facebuffer_8h.html  facebuffer_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  header_8h.html  header_8h_source.html  index.html  main_8h.html  main_8h_source.html  md_SETUP.html  menudata.js  node_8h.html  node_8h_source.html  pages.html  structConfig-members.html  structConfig.html  structDWMHeader-members.html  structDWMHeader.html  structFaceBuffer-members.html  structFaceBuffer.html  structNode-members.html  structNode.html
mpi parallelized/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+17 more)
mpi parallelized/docs/latex/: annotated.tex  config_8h.tex  facebuffer_8h.tex  files.tex  header_8h.tex  index.tex  main_8h.tex  md_SETUP.tex  node_8h.tex  refman.tex  structConfig.tex  structDWMHeader.tex  structFaceBuffer.tex  structNode.tex
mpi-libusb/: CMakeLists.txt  README.md  SETUP.md  config.c  config.h  doxygen  facebuffer.c  facebuffer.h  main.c  main.h  monitor.c  node.h  pl25a1.h  usbcomm.c  usbcomm.h
sequential/: CMakeLists.txt  cluster.c  cluster.h  node.c  sequential.c  sequential.h
sequential-2D/: CMakeLists.txt  node.c  node.h  sequential2D.c  sequential2D.h  types.h
